# jaimervq_xyz

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/content/: phrases.txt
backend/src/: main.rs
backend/src/routes/: like_handler.rs  mod.rs
backend/tests/: db_tests.rs
db/: init.sql
frontend/: Dockerfile  gallery_list.sh  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: like_button.module.css  like_button.tsx  masonry_grid.module.css  masonry_grid.tsx
frontend/app/contact/: page.tsx
frontend/app/hobbies/: page.tsx
frontend/app/resume/: page.tsx
frontend/lib/: gallery_digital.json
frontend/styles/: contact.css  globals.css
nginx/conf/: default.conf
