[package]
name = "jaimervq_xyz_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
base64ct = "<1.8.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json"] }
rand = "0.9.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.8"
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }

[dev-dependencies]